[package]
name = "navi"
version = "2.24.0"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2021"
description = "An interactive cheatsheet tool for the command-line"
homepage = "https://github.com/denisidoro/navi"
documentation = "https://github.com/denisidoro/navi"
repository = "https://github.com/denisidoro/navi"
keywords = ["cheatsheets", "terminal", "cli", "tui", "shell"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[features]
disable-command-execution = []
disable-repo-management = []

[badges]
travis-ci = { repository = "denisidoro/navi", branch = "master" }

[dependencies]
regex = { version = "1.7.3", default-features = false, features = [
   "std",
   "unicode-perl",
] }
clap = { version = "4.2.1", features = ["derive", "cargo"] }
crossterm = "0.28.0"
lazy_static = "1.4.0"
etcetera = "0.8.0"
walkdir = "2.3.3"
shellwords = "1.1.0"
anyhow = "1.0.70"
thiserror = "2.0.0"
strip-ansi-escapes = "0.2.0"
edit = "0.1.4"
remove_dir_all = "1.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
dns_common_derive = { version = "0.2.1" }
dns_common = { version = "0.2.1", default-features = false, features = [
   "yaml",
   "json",
] }
unicode-width = "0.2.0"

[target.'cfg(windows)'.dependencies]
dunce = "1"

[lib]
name = "navi"
path = "src/lib.rs"

[[bin]]
name = "navi"
path = "src/bin/main.rs"
bench = false
